--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,50 @@ const call_to_action = await getEntry('sections', 'call-to-action');
 const { banner, features }: Homepage = homepage.data;
 ---
 
+
+
+
 <Base>
   <!-- Banner -->
   <!-- Banner -->
   <section class='section pt-1 md:p-0 sm:pb-1'>
-    <div class='relative'>
+    <div class='txtCarImg-banner'>
+      <div class='image-wrapper'>
+
+        <ImageMod
+        loading={'eager'}
+        src={banner.image}
+        widths={[400, 800]}
+        sizes='(max-width: 600px) 400px, (max-width: 1200px) 800px'
+        alt='banner'
+        format='webp'
+        quality={90}
+        class='banner-car'
+      />
+        <!-- <img
+          src='https://www.reddrivingschool.com/wp-content/themes/reddrivingschool/images/car_gas_img.png'
+        /> -->
+      </div>
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='text-area'>
+            <h1>AUTOŠKOLA ĐOKIĆ</h1><h3>
+              🚦  Naučite da vozite sa lakoćom
+            </h3><div class='desc'>
+              <ul>
+                <li>✅ Fleksibilni termini obuke</li>
+                <li>✅ Vrhunski instruktoris</li>
+                <li>✅ Jeftina cena polaganja</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- <div class='relative'>
       <div
         class='absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 md:top-[30%] text-white w-full max-w-md text-center z-20'
       >
@@ -73,52 +112,51 @@ const { banner, features }: Homepage = homepage.data;
           </div>
         )
       }
-    </div>
-  </section>
-  <!-- /Banner -->
+    </div> -->
+<!-- /Banner -->
 
-  <!-- Features -->
-  {
-    features.map((feature, index: number) => (
-      <section class={`section-sm pt-0 ${index % 2 === 0 && 'bg-gradient'}`}>
-        <div class='container'>
-          <div class='row items-center justify-between'>
-            <div
-              class={`mb:md-0 mb-6 md:col-5 ${index % 2 !== 0 && 'md:order-2'}`}
-            >
-              <ImageMod
-                loading={'eager'}
-                src={feature.image}
-                height={480}
-                width={520}
-                alt={feature.title}
-                format='webp'
-              />
-            </div>
-            <div class={`md:col-7 lg:col-6 ${index % 2 !== 0 && 'md:order-1'}`}>
-              <h2 set:html={markdownify(feature.title)} class='mb-4' />
-              <p set:html={markdownify(feature.content)} class='mb-8 text-lg' />
-              <ul>
-                {feature.bulletpoints.map((bullet: string) => (
-                  <li class='relative mb-4 pl-6'>
-                    <FaCheck className={'absolute left-0 top-1.5'} />
-                    <span set:html={markdownify(bullet)} />
-                  </li>
-                ))}
-              </ul>
-              {feature.button.enable && (
-                <a class='btn btn-primary mt-5' href={feature.button.link}>
-                  {feature.button.label}
-                </a>
-              )}
-            </div>
+<!-- Features -->
+{
+  features.map((feature, index: number) => (
+    <section class={`section-sm pt-0 ${index % 2 === 0 && 'bg-gradient'}`}>
+      <div class='container'>
+        <div class='row items-center justify-between'>
+          <div
+            class={`mb:md-0 mb-6 md:col-5 ${index % 2 !== 0 && 'md:order-2'}`}
+          >
+            <ImageMod
+              loading={'eager'}
+              src={feature.image}
+              height={480}
+              width={520}
+              alt={feature.title}
+              format='webp'
+            />
+          </div>
+          <div class={`md:col-7 lg:col-6 ${index % 2 !== 0 && 'md:order-1'}`}>
+            <h2 set:html={markdownify(feature.title)} class='mb-4' />
+            <p set:html={markdownify(feature.content)} class='mb-8 text-lg' />
+            <ul>
+              {feature.bulletpoints.map((bullet: string) => (
+                <li class='relative mb-4 pl-6'>
+                  <FaCheck className={'absolute left-0 top-1.5'} />
+                  <span set:html={markdownify(bullet)} />
+                </li>
+              ))}
+            </ul>
+            {feature.button.enable && (
+              <a class='btn btn-primary mt-5' href={feature.button.link}>
+                {feature.button.label}
+              </a>
+            )}
           </div>
         </div>
-      </section>
-    ))
-  }
-  <!-- /Features -->
+      </div>
+    </section>
+  ))
+}
+<!-- /Features -->
 
-  <Testimonial testimonial={testimonial} />
-  <!-- <CallToAction call_to_action={call_to_action} /> -->
+<Testimonial testimonial={testimonial} />
+<!-- <CallToAction call_to_action={call_to_action} /> -->
 </Base>
