--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,43 +29,52 @@ const { banner, features }: Homepage = homepage.data;
 
 <Base>
   <!-- Banner -->
-  <!-- Banner -->
-  <section class='section pt-1 md:p-0 sm:pb-1'>
-    <div class='txtCarImg-banner'>
-      <div class='image-wrapper'>
 
+
+  <section class="py-4 md:py-0">
+    <div class="flex flex-col-reverse sm:flex-col-reverse md:flex-row items-center relative min-h-[505px] px-4">
+      <div class="absolute top-0 right-0 w-full md:w-1/2 h-full z-0">
+        <div class="absolute bg-red-600 rounded-full w-[450px] md:w-[1184px] h-[450px] md:h-[1184px]
+                    transform translate-x-[55%] -translate-y-[60%] md:translate-x-[20%] md:-translate-y-[56%] z-0">
+        </div>
         <ImageMod
-        loading={'eager'}
-        src={banner.image}
-        widths={[400, 800]}
-        sizes='(max-width: 600px) 400px, (max-width: 1200px) 800px'
-        alt='banner'
-        format='webp'
-        quality={90}
-        class='banner-car'
-      />
-        <!-- <img
-          src='https://www.reddrivingschool.com/wp-content/themes/reddrivingschool/images/car_gas_img.png'
-        /> -->
+          loading={'eager'}
+          src={banner.image}
+          sizes='(max-width: 600px) 400px, (max-width: 1200px) 800px'
+          alt='banner'
+          format='webp'
+          class="relative z-10 max-w-lg md:max-w-2xl mx-auto md:transform md:-translate-x-[100px]  md:translate-y-[100px]"
+        />
       </div>
-      <div class='container-fluid'>
-        <div class='row'>
-          <div class='text-area'>
-            <h1>AUTOŠKOLA ĐOKIĆ</h1><h3>
-              🚦  Naučite da vozite sa lakoćom
-            </h3><div class='desc'>
-              <ul>
-                <li>✅ Fleksibilni termini obuke</li>
-                <li>✅ Vrhunski instruktoris</li>
-                <li>✅ Jeftina cena polaganja</li>
-              </ul>
-            </div>
+
+      <div class="w-full md:w-1/2 z-20 md:pl-16 lg:pl-24 text-center md:text-left sm:mt-10">
+        <div class="mx-auto max-w-md">
+          <h1 class="text-4xl sm:text-6xl md:text-7xl font-bold text-gray-800">
+            AUTOŠKOLA ĐOKIĆ
+          </h1>
+          <h2 class="text-3xl sm:text-5xl md:text-6xl font-bold text-gray-800">
+            Naučite da vozite sa lakoćom
+          </h2>
+          <div class="mt-4">
+            <ul class="space-y-2">
+              <li class="flex items-center justify-center md:justify-start">
+                <span class="mr-2">✅</span> Fleksibilni termini obuke
+              </li>
+              <li class="flex items-center justify-center md:justify-start">
+                <span class="mr-2">✅</span> Vrhunski instruktori
+              </li>
+              <li class="flex items-center justify-center md:justify-start">
+                <span class="mr-2">✅</span> Jeftina cena polaganja
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-
     </div>
   </section>
+
+
+
 
   <!-- <div class='relative'>
       <div
